--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
     />
 
     <!-- !CSS -->
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./projects.css" />
 
     <title>Document</title>
   </head>
@@ -57,8 +57,8 @@
           </button>
 
           <nav class="mobile-menu-nav">
-            <a href="./projects.html" class="mobile-menu-link">Projects</a>
-            <a href="./contact.html" class="mobile-menu-link">Contact</a>
+            <a href="#projects" class="mobile-menu-link">Projects</a>
+            <a href="#contact" class="mobile-menu-link">Contacts</a>
           </nav>
 
           <div class="mobile-menu-social">
@@ -75,36 +75,93 @@
           </div>
         </div>
       </div>
-
-      <div class="header-bottom container">
-        <h1 class="start-title">
-          Hi, my name is <br />
-          <span>Dmytro Serhiienko</span><br />
-          I'm the Fullstack Developer.
-        </h1>
-        <a rel="noreferrer" class="start-btn-know-more" href="#about"
-          >Know more</a
-        >
-      </div>
     </header>
 
     <main>
-      <!-- **** about Section **** -->
-      <section class="about section" id="about">
-        <div class="container">
-          <h2 class="about-title">About Me</h2>
-          <img class="about-img" src="./img/my-photo.png" alt="" />
-          <p class="about-description">
-            I’m a Fullstack Developer who writes in JavaScript and TypeScript. I
-            use HTML, CSS, and Node.js to turn ideas into functional web
-            solutions with clean code and modern design.
-          </p>
-
-          <a class="about-link-resume" href="#" download>My Resume</a>
-        </div>
+      <section class="project">
+        <h2 class="project-title">Projects</h2>
+        <ul class="project-list">
+          <li class="project-item">
+            <a class="project-link" href=""
+              ><img class="project-img" src="./img/project-ecotote.webp" alt=""
+            /></a>
+            <ul class="project-list-btn">
+              <li class="project-btn-item">
+                <a
+                  class="project-btn"
+                  href="http://"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Live demo</a
+                >
+              </li>
+              <li class="project-btn-item">
+                <a
+                  class="project-btn"
+                  href="http://"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Source code</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li class="project-item">
+            <a class="project-link" href=""
+              ><img
+                class="project-img"
+                src="./img/project-webstudio.webp"
+                alt=""
+            /></a>
+            <ul class="project-list-btn">
+              <li class="project-btn-item">
+                <a
+                  class="project-btn"
+                  href="http://"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Live demo</a
+                >
+              </li>
+              <li class="project-btn-item">
+                <a
+                  class="project-btn"
+                  href="http://"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Source code</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li class="project-item">
+            <a class="project-link" href=""
+              ><img class="project-img" src="./img/project-bose.webp" alt=""
+            /></a>
+            <ul class="project-list-btn">
+              <li class="project-btn-item">
+                <a
+                  class="project-btn"
+                  href="http://"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Live demo</a
+                >
+              </li>
+              <li class="project-btn-item">
+                <a
+                  class="project-btn"
+                  href="http://"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Source code</a
+                >
+              </li>
+            </ul>
+          </li>
+        </ul>
       </section>
     </main>
-
     <!-- **** Footer Section **** -->
     <footer class="footer">
       <ul class="footer-items">
@@ -145,6 +202,6 @@
     </footer>
 
     <!-- !JavaScript -->
-    <script src="./index.js"></script>
+    <script src="./projects.js"></script>
   </body>
 </html>
