--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <header class="header" id="header">
       <div class="header-top container">
-        <a class="header-logo" href="">Dmytro Serhiienko</a>
+        <a class="header-logo" href="./index.html">Dmytro Serhiienko</a>
 
         <button class="header-burger-menu-btn" aria-label="Open menu">
           <svg class="header-burger-menu-svg" width="30" height="30">
@@ -109,7 +109,12 @@
     <footer class="footer">
       <ul class="footer-items">
         <li class="footer-list">
-          <a class="footer-link" href="">
+          <a
+            class="footer-link"
+            href="https://www.linkedin.com/in/dmytro-serhiienko-3561a0373/"
+            target="_blank"
+            rel="noreferrer"
+          >
             <svg width="30" height="30">
               <use
                 class="footer-use"
@@ -119,7 +124,12 @@
           </a>
         </li>
         <li class="footer-list">
-          <a class="footer-link" href="">
+          <a
+            class="footer-link"
+            href="https://github.com/dmytro-serhiienko"
+            target="_blank"
+            rel="noreferrer"
+          >
             <svg width="30" height="30">
               <use
                 class="footer-use"
