--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
   <body>
     <header class="header" id="header">
       <div class="header-top container">
-        <a class="header-logo" href="">Dmytro Serhiienko</a>
+        <a class="header-logo" href="./index.html">Dmytro Serhiienko</a>
 
         <button class="header-burger-menu-btn" aria-label="Open menu">
           <svg class="header-burger-menu-svg" width="30" height="30">
@@ -82,14 +82,16 @@
         <h2 class="project-title">Projects</h2>
         <ul class="project-list">
           <li class="project-item">
-            <a class="project-link" href=""
+            <a
+              class="project-link"
+              href="https://dmytro-serhiienko.github.io/project-EcoTote/"
               ><img class="project-img" src="./img/project-ecotote.webp" alt=""
             /></a>
             <ul class="project-list-btn">
               <li class="project-btn-item">
                 <a
                   class="project-btn"
-                  href="http://"
+                  href="https://dmytro-serhiienko.github.io/project-EcoTote/"
                   target="_blank"
                   rel="noopener noreferrer"
                   >Live demo</a
@@ -98,7 +100,7 @@
               <li class="project-btn-item">
                 <a
                   class="project-btn"
-                  href="http://"
+                  href="https://github.com/dmytro-serhiienko/project-EcoTote"
                   target="_blank"
                   rel="noopener noreferrer"
                   >Source code</a
@@ -107,7 +109,9 @@
             </ul>
           </li>
           <li class="project-item">
-            <a class="project-link" href=""
+            <a
+              class="project-link"
+              href="https://dmytro-serhiienko.github.io/goit-markup-hw-06/"
               ><img
                 class="project-img"
                 src="./img/project-webstudio.webp"
@@ -117,7 +121,7 @@
               <li class="project-btn-item">
                 <a
                   class="project-btn"
-                  href="http://"
+                  href="https://dmytro-serhiienko.github.io/goit-markup-hw-06/"
                   target="_blank"
                   rel="noopener noreferrer"
                   >Live demo</a
@@ -126,7 +130,7 @@
               <li class="project-btn-item">
                 <a
                   class="project-btn"
-                  href="http://"
+                  href="https://github.com/dmytro-serhiienko/goit-markup-hw-06"
                   target="_blank"
                   rel="noopener noreferrer"
                   >Source code</a
@@ -135,14 +139,16 @@
             </ul>
           </li>
           <li class="project-item">
-            <a class="project-link" href=""
+            <a
+              class="project-link"
+              href="https://dmytro-serhiienko.github.io/Bose/"
               ><img class="project-img" src="./img/project-bose.webp" alt=""
             /></a>
             <ul class="project-list-btn">
               <li class="project-btn-item">
                 <a
                   class="project-btn"
-                  href="http://"
+                  href="https://dmytro-serhiienko.github.io/Bose/"
                   target="_blank"
                   rel="noopener noreferrer"
                   >Live demo</a
@@ -151,7 +157,7 @@
               <li class="project-btn-item">
                 <a
                   class="project-btn"
-                  href="http://"
+                  href="https://github.com/dmytro-serhiienko/Bose"
                   target="_blank"
                   rel="noopener noreferrer"
                   >Source code</a
@@ -166,7 +172,12 @@
     <footer class="footer">
       <ul class="footer-items">
         <li class="footer-list">
-          <a class="footer-link" href="">
+          <a
+            class="footer-link"
+            href="https://www.linkedin.com/in/dmytro-serhiienko-3561a0373/"
+            target="_blank"
+            rel="noreferrer"
+          >
             <svg width="30" height="30">
               <use
                 class="footer-use"
@@ -176,7 +187,12 @@
           </a>
         </li>
         <li class="footer-list">
-          <a class="footer-link" href="">
+          <a
+            class="footer-link"
+            href="https://github.com/dmytro-serhiienko"
+            target="_blank"
+            rel="noreferrer"
+          >
             <svg width="30" height="30">
               <use
                 class="footer-use"
