--- a/projects.html
+++ b/projects.html
@@ -33,10 +33,31 @@
         <a class="header-logo" href="./index.html">Dmytro Serhiienko</a>
 
         <button class="header-burger-menu-btn" aria-label="Open menu">
-          <svg class="header-burger-menu-svg" width="30" height="30">
+          <svg
+            class="header-burger-menu-svg burger-lines"
+            width="30"
+            height="30"
+            viewBox="0 0 32 32"
+          >
             <path
               d="M5.333 20v-2.667h21.333v2.667h-21.333zM5.333 14.667v-2.667h21.333v2.667h-21.333z"
+              fill="currentColor"
             ></path>
+          </svg>
+          <svg
+            class="header-burger-menu-svg cross-lines"
+            width="30"
+            height="30"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M18 6L6 18M6 6L18 18"
+              stroke="#ffffff"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              fill="none"
+            />
           </svg>
         </button>
       </div>
@@ -44,21 +65,9 @@
       <!-- Mobile Menu -->
       <div class="mobile-menu" id="mobile-menu">
         <div class="mobile-menu-content">
-          <button class="mobile-menu-close" aria-label="Close menu">
-            <svg width="30" height="30" viewBox="0 0 24 24" fill="none">
-              <path
-                d="M18 6L6 18M6 6L18 18"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
-            </svg>
-          </button>
-
           <nav class="mobile-menu-nav">
-            <a href="#projects" class="mobile-menu-link">Projects</a>
-            <a href="#contact" class="mobile-menu-link">Contacts</a>
+            <a href="./projects.html" class="mobile-menu-link">Projects</a>
+            <a href="./contact.html" class="mobile-menu-link">Contacts</a>
           </nav>
 
           <div class="mobile-menu-social">
@@ -99,7 +108,7 @@
             <a
               class="project-link"
               href="https://dmytro-serhiienko.github.io/project-EcoTote/"
-              ><img class="project-img" src="./img/project-ecotote.webp" alt=""
+              ><img class="project-img" src="./img/eco.png" alt=""
             /></a>
             <ul class="project-list-btn">
               <li class="project-btn-item">
@@ -126,10 +135,7 @@
             <a
               class="project-link"
               href="https://dmytro-serhiienko.github.io/goit-markup-hw-06/"
-              ><img
-                class="project-img"
-                src="./img/project-webstudio.webp"
-                alt=""
+              ><img class="project-img" src="./img/web.png" alt=""
             /></a>
             <ul class="project-list-btn">
               <li class="project-btn-item">
@@ -156,7 +162,7 @@
             <a
               class="project-link"
               href="https://dmytro-serhiienko.github.io/Bose/"
-              ><img class="project-img" src="./img/project-bose.webp" alt=""
+              ><img class="project-img" src="./img/bos.png" alt=""
             /></a>
             <ul class="project-list-btn">
               <li class="project-btn-item">
