--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,18 @@
             />
           </svg>
         </button>
+
+        <!-- ! Menu-->
+        <nav class="header-nav">
+          <ul class="header-nav-item">
+            <li>
+              <a href="./projects.html" class="header-nav-link">Projects</a>
+            </li>
+            <li>
+              <a href="./contact.html" class="header-nav-link">Contact</a>
+            </li>
+          </ul>
+        </nav>
       </div>
 
       <!-- Mobile Menu -->
