--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
     <header class="header" id="header">
       <div class="header-top container">
         <a class="header-logo" href="./index.html">Dmytro Serhiienko</a>
+        <!-- ! Menu-->
+        <nav class="header-nav">
+          <ul class="header-nav-item">
+            <li>
+              <a href="./projects.html" class="header-nav-link">Projects</a>
+            </li>
+            <li>
+              <a href="./contact.html" class="header-nav-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
         <button class="header-burger-menu-btn" aria-label="Open menu">
           <svg
@@ -93,10 +104,13 @@
 
       <div class="header-bottom container">
         <h1 class="start-title">
-          Hi, my name is <br />
-          <span>Dmytro Serhiienko</span><br />
-          I'm the Fullstack Developer.
+          Hi there! 👋<br />
+          <span>
+            I’m Dmytro — Fullstack Developer <br />
+            I build fast, clean, and modern web experiences.
+          </span>
         </h1>
+
         <a rel="noreferrer" class="start-btn-know-more" href="#about"
           >Know more</a
         >
@@ -110,9 +124,13 @@
           <h2 class="about-title">About Me</h2>
           <img class="about-img" src="./img/my-photo.png" alt="" />
           <p class="about-description">
-            I’m a Fullstack Developer who writes in JavaScript and TypeScript. I
-            use HTML, CSS, and Node.js to turn ideas into functional web
-            solutions with clean code and modern design.
+            I’m a Fullstack Developer with a passion for creating clean,
+            efficient, and user-friendly web solutions. I work mainly with
+            JavaScript and TypeScript, building both front-end and back-end
+            using tools like HTML, CSS, and Node.js. I enjoy transforming
+            complex ideas into smooth, interactive experiences — where design
+            and functionality meet. When I’m not coding, you’ll probably find me
+            enjoying a good cup of coffee ☕ or exploring new tech trends 💻.
           </p>
 
           <a class="about-link-resume" href="#" download>My Resume</a>
