--- a/contact.html
+++ b/contact.html
@@ -63,11 +63,11 @@
 
         <!-- ! Menu-->
         <nav class="header-nav">
-          <ul class="header-nav-item">
-            <li>
+          <ul class="header-nav-list">
+            <li class="header-nav-item">
               <a href="./projects.html" class="header-nav-link">Projects</a>
             </li>
-            <li>
+            <li class="header-nav-item">
               <a href="./contact.html" class="header-nav-link">Contact</a>
             </li>
           </ul>
